<resources>
    <string name="app_name">CineParche</string>
    <!-- Descripción de los botones en el control de la interfaz -->
    <string name="exo_controls_lista_pelis">Lista de Películas</string>
    <string name="exo_vr">Modo VR</string>
    <string name="exo_shuffle">Modo Aleatorio</string>
    <string name="exo_repeat_toggle">Repetir</string>
    <string name="exo_subtitle">Subtítulos</string>
    <string name="exo_settings">Configuración</string>
    <string name="exo_fullscreen">Pantalla Completa</string>
    <string name="exo_overflow_show">Mostrar Opciones</string>
    <string name="exo_overflow_hide">Ocultar Opciones</string>
    <string name="exo_rewind">rewind</string>
    <string name="exo_play_pause">Pause</string>
    <string name="exo_fast_forward">forward</string>
    <string name="default_web_client_id">TU_DEFAULT_WEB_CLIENT_ID</string>
    <!-- Otros posibles strings -->
    <string name="exo_ffwd">Avanzar</string>
    <string name="exo_download_removing">Eliminando Descarga</string>

    <string name="columna_1">
    <![CDATA[
    🎬 <b>¡El parche se armó!</b> Disfruta las mejores películas en casa con amigos y familia. Comparte la app y disfruten juntos, sin importar la distancia.<br><br>
    📦 <b>Paquetes Disponibles (COP):</b><br>
    🥉 <b>Bronce: $10.000</b> (50 Castv)<br>
    🥈 <b>Plata: $22.000</b> (120 Castv)<br>
    🥇 <b>Oro: $45.000</b> (250 Castv)<br><br>
    💳 <b>Paga Fácil:</b> En tu app bancaria usa "Pagar con Bre-Be" e ingresa el código <b>@TMB833</b>.
    ]]>
</string>

    <string name="columna_2">
    <![CDATA[
    ✅ <b>Activación de Paquetes:</b><br>
    1. Registra tu paquete en el televisor con el botón <b>"Activar Paquete"</b>.<br>
    2. Envía el comprobante al <b>Soporte de Telegram</b> para cargar tu saldo CasTV.<br><br>

    📺 <b>Tipos de Contenido:</b><br>
    🎬 <b>Gratis:</b> Películas con <b>contador azul</b> ya están activas. ¡Dale a reproducir sin costo!<br>
    ⚡ <b>Activación Inmediata:</b> Películas con etiqueta "ACTIVAR" se activan al instante.<br>
    📦 <b>Contenido bajo Pedido:</b> Solicita películas con etiqueta "ALQUILAR"; las gestionamos para ti, Notificaremos canal oficial de telegram.<br>
    📦 <b>Contenido bajo Pedido especial:</b> Solicita películas en la pestaña "Pedir"; las gestionamos para ti, Notificaremos canal oficial de telegram.<br><br>

    💎 <b>Ventajas CineParche:</b><br>
    ✔ <b>Acceso Libre:</b> Contenido "ONLINE" es gratis para toda la comunidad.<br>
    ✔ <b>Tu Pedido cuenta:</b> Tú eliges qué contenido PEDIR.<br>
    ✔ <b>Soporte 24/7:</b> Estamos atentos a tus solicitudes.
    ]]>
</string>

    <string name="columna_3">
    <![CDATA[
    🎥 <b>Cómo Alquilar Contenido:</b><br>
    1. Busca la etiqueta <b>"Alquilar"</b> en la pantalla principal de la aplicación.<br>
    2. O usa el botón <b>"Pedidos"</b> para solicitar la película que tú quieras.<br><br>
    📢 <b>Servicio Garantizado 24/7:</b><br>
    Tu pedido estará disponible en cuestión de minutos para garantizar la mejor experiencia.<br><br>
    🌟 <b>¡Invita a tus amigos al parche!</b>
    ]]>
</string>


</resources>