<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A0E14"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <!-- ⭐ UN SOLO LinearLayout contenedor de TODO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="afterDescendants">

        <!-- Indicador de carga -->
        <ProgressBar
            android:id="@+id/progressCargaAlquileres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:indeterminateTint="#C5A059"
            android:visibility="gone" />

        <!-- ========================================== -->
        <!-- HEADER (Fondo Azul Muy Oscuro)             -->
        <!-- ========================================== -->
        <LinearLayout
            android:id="@+id/headerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#05080A">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imagenuser"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icono"
                    android:background="@drawable/focus_selector"
                    android:focusable="true"
                    android:layout_marginEnd="15dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/textfecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Lunes 27 Abril"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp" />
                        <TextView
                            android:id="@+id/textHora"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="03:50 PM"
                            android:textColor="#00BCD4"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="4dp">
                        <TextView
                            android:id="@+id/textUsuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Usuario: Invitado"
                            android:textColor="#B0BEC5"
                            android:textSize="14sp"
                            android:layout_marginEnd="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="4dp">
                        <TextView
                            android:id="@+id/useronline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ON-12"
                            android:textColor="#4CAF50"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="8dp" />
                        <TextView
                            android:id="@+id/useroff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="OFF-5"
                            android:textColor="#F44336"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textCastv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Créditos: 50 CasTV"
                        android:textColor="#FFEB3B"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
            <!-- ========================================== -->
            <!-- CONTENEDOR DE ALQUILERES (FUERA DEL HEADER) -->
            <!-- ========================================== -->
            <LinearLayout
                android:id="@+id/layoutAlquileresContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="5dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvTituloSeccionAlquileres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="🍿 Mis Alquileres Activos"
                    android:textColor="#C5A059"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <!-- ⭐ RecyclerView con foco habilitado -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerMisAlquileres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:scrollbars="none"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    android:overScrollMode="never"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:descendantFocusability="afterDescendants"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp"
                    android:nextFocusUp="@id/imagenuser"
                    android:nextFocusDown="@id/cardSoporte" />

            </LinearLayout>
            <!-- ⭐ NOTICIA ELEGANTE (DENTRO DEL HEADER) -->
            <TextView
                android:id="@+id/txtBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#141A24"
                android:text="Cargando noticia..."
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                android:lineSpacingMultiplier="1.2" />

        </LinearLayout>



        <!-- ========================================== -->
        <!-- CONTENIDO DE TARJETAS                      -->
        <!-- ========================================== -->
        <LinearLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- Card 1: SOPORTE Y PAGOS -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardSoporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:focusable="true"
                android:clickable="true"
                app:cardBackgroundColor="#141A24"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <TextView
                        android:id="@+id/col1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/columna_1"
                        android:textColor="#E0E0E0"
                        android:textSize="16sp"
                        android:lineSpacingMultiplier="1.3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="REPORTAR PAGO"
                        android:textColor="#C5A059"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="15dp" />

                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:src="@drawable/soporte"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="10dp"
                        android:background="#FFFFFF"
                        android:padding="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 2: CANAL Y ACTUALIZACIONES -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardColumna2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:focusable="true"
                android:clickable="true"
                app:cardBackgroundColor="#141A24"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <TextView
                        android:id="@+id/col2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/columna_2"
                        android:textColor="#E0E0E0"
                        android:textSize="16sp"
                        android:lineSpacingMultiplier="1.3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="GRUPO DEL PARCHE"
                        android:textColor="#C5A059"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="15dp" />

                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:src="@drawable/canal"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="10dp"
                        android:background="#FFFFFF"
                        android:padding="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 3: COMUNIDAD Y GRUPO -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardNotificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:focusable="true"
                android:clickable="true"
                app:cardBackgroundColor="#141A24"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <TextView
                        android:id="@+id/col3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/columna_3"
                        android:textColor="#E0E0E0"
                        android:textSize="16sp"
                        android:lineSpacingMultiplier="1.3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="CANAL OFICIAL"
                        android:textColor="#C5A059"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="15dp" />

                    <ImageView
                        android:id="@+id/qr_grupo"
                        android:layout_width="220dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:src="@drawable/grupo"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="10dp"
                        android:background="#FFFFFF"
                        android:padding="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>